--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
+
+body, html {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.login-container .md-input-placeholder {
+  margin-left: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 13px;
+}
+
+.login-container .md-input-placeholder,
+.login-container input {
+  color: rgba(255, 255, 255, 0.75);
+  font-family: 'Raleway', sans-serif;
+}
+
+.login-container .md-input-underline {
+  border-color: rgba(255, 255, 255, 0.75);
+}
