--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+/*@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';*/
+@import 'unicorn-app-theme.css';
 
 
 body, html {
@@ -24,4 +25,8 @@ body, html {
 
 .login-container .md-input-underline {
   border-color: rgba(255, 255, 255, 0.75);
+}
+
+.authentication-overlay md-card md-progress-circle path {
+  stroke: #fff;
 }
