--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+
+<div class="router-container">
+  <router-outlet></router-outlet>
+</div>
