--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,9 +2,14 @@
   <div class="login-card-container">
     <md-card class="login-card">
       <img src="../assets/dealersocket-logo.png" alt="DealerSocket">
-      <md-input #email placeholder="Email"></md-input>
-      <md-input #password placeholder="Password" type="password"></md-input>
-      <button md-raised-button color="primary" (click)="login(email.value, password.value)">LOGIN</button>
+      <div style="color: #EF5350"
+      [ngStyle]="{height: loggedIn === false ? '25px' : '0px', transition: 'height 200ms ease', overflow: 'hidden', display: 'flex', alignItems: 'center'}"
+      ><i class="material-icons">error</i>&nbsp;Your email or login is incorrect</div>
+      <form>
+        <md-input [dividerColor]="loggedIn === false ? 'warn' : 'accent'" #email placeholder="Email"></md-input>
+        <md-input [dividerColor]="loggedIn === false ? 'warn' : 'accent'" #password placeholder="Password" type="password"></md-input>
+        <button type="submit" md-raised-button color="primary" (click)="login(email.value, password.value)">LOGIN</button>
+      </form>
     </md-card>
   </div>
   <div class="product-container">
