--- a/src/app/product-selection/product-selection.component.html
+++ b/src/app/product-selection/product-selection.component.html
@@ -1,3 +1,5 @@
-<p>
-  product-selection works!
-</p>
+<div class="product-selection-container">
+  <md-card>
+    <h1>Product selection works</h1>
+  </md-card>
+</div>
