--- a/src/app/product-selection/product-selection.component.html
+++ b/src/app/product-selection/product-selection.component.html
@@ -1,7 +1,11 @@
 <div class="product-selection-container">
   <div class="product-selection">
     <div class="products-container">
-      <div class="product-container" *ngFor="let pl of product_logos">
+      <div class="product-container" *ngFor="let product of product_info; let i = index">
+        <div class="activation-date">
+          <h4 *ngIf="(product.product | async)">Product Activation Date:</h4>
+          <h4 *ngIf="(product.product | async)">{{ (product.product | async)?.activation }}</h4>
+        </div>
         <div class="circle-container">
           <svg width="250" height="250" viewBox="0 0 100 100">
             <defs>
@@ -10,12 +14,15 @@
                 <stop offset="100%" style="stop-color:#42A5F5;stop-opacity:1" />
               </linearGradient>
             </defs>
-            <path [attr.d]="path | async" stroke="#81C784" fill="transparent" stroke-width="2"/>
+            <path [attr.d]="(product.milestone | async) ? describeArc(50, 50, 48.5, 0, (product.milestone | async)?.percent_complete / 100 * 360) : describeArc(50, 50, 48.5, 0, 0)" 
+            stroke="#81C784" fill="transparent" stroke-width="2"/>
             <circle r="48" cx="50" cy="50" fill="url(#grad1)"/>
           </svg>
-          <span [class]="pl.alt | to_path:'icon-':'-icon'"></span>
+          <span [class]="product.logo_info.alt | to_path:'icon-':'-icon'"></span>
         </div>
-        <img [src]="pl.path" [alt]="pl.alt">
+        <div class="logo-container">
+          <img [src]="product.logo_info.path" [alt]="product.logo_info.alt">
+        </div>
       </div>
     </div>
     <div class="moto-container">
