--- a/src/styles.css
+++ b/src/styles.css
@@ -74,7 +74,7 @@ body, html {
 }
 
 md-tab-body {
-  background-color: #222;
+  background-color: #222B32;
   color: #fff;
   text-align: center;
 }
