--- a/src/app/milestone-tracker/milestone-tracker.component.css
+++ b/src/app/milestone-tracker/milestone-tracker.component.css
@@ -10,8 +10,20 @@ md-tab-group {
 }
 
 .milestone-content {
-  max-width: 1640px;
+  max-width: 1240px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  /*justify-content: center;*/
+  align-items: center;
+}
+
+md-card {
+  margin-top: 25px;
+  margin-left: 17.5px;
+  margin-right: 17.5px;
+  background-color: rgba(0,0,0,0.4);
+  color: #fff;
 }
 
 .milestone-content h1, h2, h3, h4, h5, p, a, li {
@@ -44,4 +56,143 @@ md-tab-group {
 .pm-contact span a:hover,
 .pm-contact span a:visited {
   color: #fff;
+}
+
+.milestone-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.milestone-container md-card {
+  flex: 0 0 calc(100% - 50px);
+  box-sizing: border-box;
+}
+
+@media (min-width: 750px) {
+  .milestone-container md-card {
+    flex: 0 0 calc(50% - 50px);
+  }
+}
+
+@media (min-width: 1240px) {
+  .milestone-container md-card {
+    flex: 0 0 calc(33.333% - 50px);
+  }
+}
+
+
+/* Timeline */
+
+.row .col {
+  float: left;
+  box-sizing: border-box;
+  padding: 0 0.75rem;
+}
+
+.timeline {
+  border-left: 8px solid #42A5F5;
+  border-bottom-right-radius: 2px;
+  border-top-right-radius: 2px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  color: #333;
+  margin: 50px auto;
+  letter-spacing: 0.5px;
+  position: relative;
+  line-height: 1.4em;
+  padding: 20px;
+  list-style: none;
+  text-align: left;
+  background-color: white;
+}
+
+.timeline h1,
+.timeline h2,
+.timeline h3 {
+  font-size: 1.4em;
+}
+
+.timeline .event {
+  border-bottom: 1px solid rgba(160, 160, 160, 0.2);
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.timeline .event:last-of-type {
+  padding-bottom: 0;
+  margin-bottom: 0;
+  border: none;
+}
+
+.timeline .event:before,
+.timeline .event:after {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+
+.timeline .event:before {
+  left: -177.5px;
+  color: #fff;
+  content: attr(data-date);
+  text-align: right;
+  /*  font-weight: 100;*/
+
+  font-size: 16px;
+  min-width: 120px;
+}
+
+.timeline .event:after {
+  box-shadow: 0 0 0 8px #42A5F5;
+  left: -30px;
+  background: #212121;
+  border-radius: 50%;
+  height: 11px;
+  width: 11px;
+  content: "";
+  top: 5px;
+}
+/**/
+/*——————————————
+Responsive Stuff
+———————————————*/
+
+@media (max-width: 945px) {
+  .timeline .event::before {
+    left: 0.5px;
+    top: 20px;
+    min-width: 0;
+    font-size: 13px;
+  }
+  .timeline h3 {
+    font-size: 16px;
+  }
+  .timeline p {
+    padding-top: 20px;
+  }
+  section.lab h3.card-title {
+    padding: 5px;
+    font-size: 16px
+  }
+}
+
+@media (max-width: 768px) {
+  .timeline .event::before {
+    left: 0.5px;
+    top: 20px;
+    min-width: 0;
+    font-size: 13px;
+  }
+  .timeline .event:nth-child(1)::before,
+  .timeline .event:nth-child(3)::before,
+  .timeline .event:nth-child(5)::before {
+    top: 38px;
+  }
+  .timeline h3 {
+    font-size: 16px;
+  }
+  .timeline p {
+    padding-top: 20px;
+  }
 }
