--- a/src/app/milestone-tracker/milestone-tracker.component.css
+++ b/src/app/milestone-tracker/milestone-tracker.component.css
@@ -27,6 +27,8 @@ md-card {
 }
 
 .milestone-content h1, h2, h3, h4, h5, p, a, li {
+  font-family: 'Raleway', sans-serif;
+  font-weight: normal;
   /*margin: 0;
   padding: 0;*/
 }
@@ -91,36 +93,41 @@ md-card {
 }
 
 .timeline {
-  border-left: 8px solid #42A5F5;
-  border-bottom-right-radius: 2px;
-  border-top-right-radius: 2px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  color: #333;
-  margin: 50px auto;
+  /*border-left: 8px solid #42A5F5;*/
+  /*border-bottom-right-radius: 2px;
+  border-top-right-radius: 2px;*/
+  /*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
+  color: #fff;
+  margin: 50px 32px;
   letter-spacing: 0.5px;
   position: relative;
   line-height: 1.4em;
-  padding: 20px;
+  padding: 0px;
   list-style: none;
   text-align: left;
-  background-color: white;
+  font-family: 'Raleway', sans-serif;
+  /*background-color: white;*/
 }
 
 .timeline h1,
 .timeline h2,
 .timeline h3 {
   font-size: 1.4em;
+  font-weight: 600;
 }
 
 .timeline .event {
-  border-bottom: 1px solid rgba(160, 160, 160, 0.2);
+  /*border-bottom: 1px solid rgba(160, 160, 160, 0.2);*/
   padding-bottom: 15px;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
   position: relative;
+  padding: 20px;
+  box-shadow: -10px 0px 0px 0px #42A5F5;
+  transition: all 0.3s ease;
 }
 
 .timeline .event:last-of-type {
-  padding-bottom: 0;
+  /*padding-bottom: 0;*/
   margin-bottom: 0;
   border: none;
 }
@@ -130,28 +137,46 @@ md-card {
   position: absolute;
   display: block;
   top: 0;
+  transition: all 0.3s ease;
 }
 
 .timeline .event:before {
-  left: -177.5px;
+  left: -147.5px;
   color: #fff;
   content: attr(data-date);
   text-align: right;
   /*  font-weight: 100;*/
-
+  top: 41px;
   font-size: 16px;
   min-width: 120px;
 }
 
 .timeline .event:after {
   box-shadow: 0 0 0 8px #42A5F5;
-  left: -30px;
+  left: -12px;
   background: #212121;
   border-radius: 50%;
   height: 11px;
   width: 11px;
   content: "";
-  top: 5px;
+  top: 47px;
+}
+
+
+.timeline .event.needs-attention {
+  box-shadow: -10px 0px 0px 0px #EF5350;
+  border-right: 4px solid #EF5350;
+}
+.timeline .event.needs-attention:after {
+  box-shadow: 0 0 0 8px #EF5350;
+}
+
+.timeline .event.complete {
+  box-shadow: -10px 0px 0px 0px #66BB6A;
+  /*border-right: 4px solid #66BB6A;*/
+}
+.timeline .event.complete:after {
+  box-shadow: 0 0 0 8px #66BB6A;
 }
 /**/
 /*——————————————
@@ -160,8 +185,9 @@ Responsive Stuff
 
 @media (max-width: 945px) {
   .timeline .event::before {
-    left: 0.5px;
-    top: 20px;
+    left: 19.5px;
+    bottom: 0;
+    top: initial;
     min-width: 0;
     font-size: 13px;
   }
@@ -169,30 +195,35 @@ Responsive Stuff
     font-size: 16px;
   }
   .timeline p {
-    padding-top: 20px;
+    padding-top: 0px;
   }
   section.lab h3.card-title {
     padding: 5px;
     font-size: 16px
   }
+  .timeline .event:after {
+    top: 41px;
+  }
+
 }
 
 @media (max-width: 768px) {
   .timeline .event::before {
-    left: 0.5px;
-    top: 20px;
+    left: 19.5px;
+    bottom: 0;
+    top: initial;
     min-width: 0;
     font-size: 13px;
   }
-  .timeline .event:nth-child(1)::before,
+  /*.timeline .event:nth-child(1)::before,
   .timeline .event:nth-child(3)::before,
   .timeline .event:nth-child(5)::before {
     top: 38px;
-  }
+  }*/
   .timeline h3 {
     font-size: 16px;
   }
   .timeline p {
-    padding-top: 20px;
+    padding-top: 0px;
   }
 }
