--- a/src/app/project-manager-dashboard/project-manager-dashboard.component.css
+++ b/src/app/project-manager-dashboard/project-manager-dashboard.component.css
@@ -28,3 +28,63 @@
   justify-content: space-around;
   align-items: center;
 }
+
+.pm-dashboard .controls {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  padding: 25px 0;
+  align-items: flex-end;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px 0;
+}
+.grid .dealership-item {
+  width: calc(25%-30px);
+  background: linear-gradient(25deg, rgb(27, 37, 45), rgb(37, 47, 55) 95%);
+  color: #fff;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 15px;
+  min-height: 115px;
+}
+
+.grid .dealership-item:hover {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.grid .dealership-item i {
+  margin-right: 10px;
+}
+
+.grid .dealership-item .info {
+  display: flex;
+  align-items: center;
+}
+
+.grid .dealership-item .info a,
+.grid .dealership-item .info a:hover,
+.grid .dealership-item .info a:visited {
+  color: #fff;
+}
+
+/*.grid .dealership-item .info-overlay {
+  background-color: rgb(9, 108, 187);
+  transform: scale(0);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.grid .dealership-item:hover .info-overlay {
+  transform: scale(1);
+}*/
