--- a/src/styles.css
+++ b/src/styles.css
@@ -78,3 +78,16 @@ md-tab-body {
   color: #fff;
   text-align: center;
 }
+
+/*.cdk-overlay-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.3);
+}*/
