--- a/src/app/project-manager-dashboard/add-dealership-dialog.component.html
+++ b/src/app/project-manager-dashboard/add-dealership-dialog.component.html
@@ -1,37 +1,54 @@
 <div class="dialog-container">
-  <form>
-    <h3><span data-idx="1"></span> Dealership Information</h3>
-    <md-grid-list cols="6" rowHeight="75px" gutterSize="10px">
-      <md-grid-tile colspan="6" rowspan="1">
-        <md-input dividerColor="accent" #name placeholder="Name"></md-input>
-      </md-grid-tile>
-      <md-grid-tile colspan="6" rowspan="1">
-        <md-input dividerColor="accent" #address placeholder="Address"></md-input>
-      </md-grid-tile>
-      <md-grid-tile colspan="2" rowspan="1">
-        <md-input dividerColor="accent" #city placeholder="City"></md-input>
-      </md-grid-tile>
-      <md-grid-tile colspan="2" rowspan="1">
-        <md-input dividerColor="accent" #state placeholder="State"></md-input>
-      </md-grid-tile>
-      <md-grid-tile colspan="2" rowspan="1">
-        <md-input dividerColor="accent" #zip placeholder="Zip"></md-input>
-      </md-grid-tile>
-    </md-grid-list>
-    <h3><span data-idx="2"></span> Products</h3>
-    <md-chip-list selectable="true">
-      <md-chip *ngFor="let pl of productLogos.getProductLogos(); let i = index;"
-      color="primary"
-      [tabindex]="i + 6"
-      (click)="selected_products.indexOf(pl.alt) >= 0 ? deselectProduct(pl.alt) : selectProduct(pl.alt)"
-      [selected]="selected_products.indexOf(pl.alt) >= 0">
-        {{ pl.alt }}
-      </md-chip>
-    </md-chip-list>
-    <div [@productState]="product_state">
-      {{last_selected_product}}
-    </div>
-    <h3><span data-idx="3"></span> People</h3>
-    <button type="submit" md-raised-button color="primary">ADD</button>
-  </form>
+  <md-tab-group [selectedIndex]="selected_tab">
+    <md-tab label="">
+      <form>
+        <h3><span data-idx="1"></span> Dealership Information</h3>
+        <md-grid-list cols="6" rowHeight="75px" gutterSize="10px">
+          <md-grid-tile colspan="6" rowspan="1">
+            <md-input dividerColor="accent" #name placeholder="Name"></md-input>
+          </md-grid-tile>
+          <md-grid-tile colspan="6" rowspan="1">
+            <md-input dividerColor="accent" #address placeholder="Address"></md-input>
+          </md-grid-tile>
+          <md-grid-tile colspan="2" rowspan="1">
+            <md-input dividerColor="accent" #city placeholder="City"></md-input>
+          </md-grid-tile>
+          <md-grid-tile colspan="2" rowspan="1">
+            <md-input dividerColor="accent" #state placeholder="State"></md-input>
+          </md-grid-tile>
+          <md-grid-tile colspan="2" rowspan="1">
+            <md-input dividerColor="accent" #zip placeholder="Zip"></md-input>
+          </md-grid-tile>
+        </md-grid-list>
+        <h3><span data-idx="2"></span> Products</h3>
+        <div class="product-inline-info-container">
+          <div *ngFor="let sp of products; let i = index" class="product-inline-info">
+            <h4 (click)="toggleProductSelect(i)" [class.selected]="sp.selected">{{ sp.name }}</h4>
+            <md-select (click)="selectProduct(i)" placeholder="Type">
+            </md-select>
+            <md-select (click)="selectProduct(i)" placeholder="Milestones">
+            </md-select>
+            <button (click)="selectProduct(i) + gotoTab(1, i)" md-button color="primary">More&nbsp;<i class="material-icons">keyboard_arrow_right</i></button>
+          </div>
+        </div>
+        <h3><span data-idx="3"></span> People</h3>
+        <button type="submit" md-raised-button color="primary">ADD</button>
+      </form>
+    </md-tab>
+    <md-tab label="">
+      <md-toolbar style="background-color: #fff">
+        <button (click)="gotoTab(0)" md-button color="primary"><i class="material-icons">keyboard_backspace</i></button>
+        <span>{{ (product_more_info)?.name }}</span>
+      </md-toolbar>
+      <div class="controls">
+        <md-select (click)="selectProduct(i)" placeholder="Type">
+        </md-select>
+        <md-select (click)="selectProduct(i)" placeholder="Milestones">
+        </md-select>
+      </div>
+      <div class="milestone-editor">
+        <h4>Milestones:</h4>
+      </div>
+    </md-tab>
+  </md-tab-group>
 </div>
